# sky.pro-pd8-sim-30.1.14

./: Makefile  README.md  pyproject.toml  requirements.txt
part1/custom_user_1/custom_user_1/: apps.py  models.py
part1/custom_user_1/custom_user_1/migrations/: 0001_initial.py
part1/custom_user_1/my_project/: settings.py
part1/custom_user_2/custom_user_2/: models.py  tests.py
part1/custom_user_2/custom_user_2/migrations/: 0002_alter_customuser_role.py  0003_alter_customuser_role.py  0004_alter_customuser_role.py  0005_alter_customuser_role.py
part1/register_jwt_token/login/: tests.py  urls.py
part1/register_jwt_token/my_project/: settings.py
part1/register_jwt_token/register/: urls.py  views.py
part1/register_login/login/: tests.py
part1/register_login/my_project/: settings.py
part1/register_login/register/: serializers.py  urls.py  views.py
part2/authorization/fixtures/: store_update.json
part2/authorization/store_list/: serializers.py  tests.py  views.py
part2/authorization/store_update/: apps.py  urls.py  views.py
part2/authorization/users/: models.py
part2/diary/my_diary/: apps.py  models.py  permissions.py  serializers.py  views.py
part2/diary/my_project/: settings.py
part2/diary/users/: models.py  urls.py
part2/sky_ad/ad/: permissions.py  urls.py  views.py
part2/sky_ad/my_project/: settings.py
part2/sky_ad/users/: apps.py  models.py  urls.py  views.py
postgres_l30/: docker-compose.yaml
postgres_l30/docker-postgresql-multiple-databases/: Dockerfile  create-multiple-postgresql-databases.sh
(+56 files in other folders)
