[tool.poetry]
name = "sky-pro-pd8-sim-30-1-14"
version = "0.1.0"
description = ""
authors = ["grm <golosov_SA@mail.ru>"]
readme = "README.md"
packages = [{include = "sky"}]

[tool.poetry.dependencies]
python = "^3.11"
asgiref = "^3.5.2"
beautifulsoup4 = "^4.11.1"
black = "^22.10.0"
bs4 = "^0.0.1"
click = "^8.1.3"
colorama = "^0.4.6"
django = "^4.1.2"
django-nose = "^1.4.7"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.2.2"
factory-boy = "^3.2.1"
faker = "^15.1.1"
isort = "^5.10.1"
marshmallow = "^3.18.0"
mypy-extensions = "^0.4.3"
nose = "^1.3.7"
parameterized = "^0.8.1"
pathspec = "^0.10.1"
pinocchio = "^0.4.3"
platformdirs = "^2.5.2"
psycopg2 = "^2.9.5"
pyjwt = "^2.6.0"
python-dateutil = "^2.8.2"
pytz = "^2022.5"
six = "^1.16.0"
soupsieve = "^2.3.2.post1"
sqlalchemy = "^1.4.42"
sqlparse = "^0.4.3"
text-unidecode = "^1.3"
tomli = "^2.0.1"
typing-extensions = "^4.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
